<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_category_black_24dp"
            android:title="@string/categories" />
        <item
            android:id="@+id/nav_brands"
            android:icon="@drawable/ic_brand_black_24dp"
            android:title="@string/brands" />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_offer_black_24dp"
            android:title="@string/offers" />
        <item
            android:id="@+id/nav_bag"
            android:icon="@drawable/ic_bag_black_24dp"
            android:title="@string/my_bag" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
