<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.navdemo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.example.navdemo.ui.category.CategoryFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_offers"
        android:name="com.example.navdemo.ui.offers.OfferFragment"
        android:label="@string/offers"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_brands"
        android:name="com.example.navdemo.ui.brands.BrandsFragment"
        android:label="@string/brands"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_bag"
        android:name="com.example.navdemo.ui.bag.BagFragment"
        android:label="My Bag"
        tools:layout="@layout/fragment_bag" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.navdemo.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.navdemo.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>